#3739 Starting sendmail instead of postfix with supervisord.

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -41,8 +41,8 @@ startsecs=0
 autorestart=false
 startretries=0
 
-[program:postfix]
-command=/etc/init.d/postfix start
+[program:sendmail]
+command=/etc/init.d/sendmail start
 autostart=true
 startsecs=0
 autorestart=false
