--- a/config/php.ini
+++ b/config/php.ini
@@ -1040,7 +1040,7 @@ mail.add_x_header = On
 ; the full path of the script, line number, To address and headers.
 ;mail.log =
 ; Log mail to syslog (Event Log on Windows).
-;mail.log = syslog
+mail.log = maillog
 
 [SQL]
 ; http://php.net/sql.safe-mode
