--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -19,13 +19,13 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 priority=10
 
-[program:crond]
-command=/etc/init.d/crond start
+[program:cron]
+command=/etc/init.d/cron start
 autostart=true
 startsecs=0
 autorestart=false
 startretries=0
-logfile=/var/log/crond.log
+logfile=/var/log/cron.log
 
 [program:pmg-hostname-config]
 command=/usr/local/bin/pmg-hostname-config
